Fix ManufacturerData and ServiceData DBus data type to match with bluez.

Bluez recent changes corresponding to this CL:
https://chromium.googlesource.com/chromiumos/third_party/bluez/+/758dae03725ed7a1138d848aad940a73bbf5d659
https://chromium.googlesource.com/chromiumos/third_party/bluez/+/d356a6242be9a1aba2cca871b79618e3b28a5ec2

BUG=725349
TEST=Called chrome.bluetoothLowEnergy.registerAdvertisement with
advertisement data containing both manufacturerData and serviceData, the
operation succeeded.

Review-Url: https://codereview.chromium.org/2907913002
Cr-Commit-Position: refs/heads/master@{#476433}

Former-commit-id: 02bf4db5faf5a62c0b373e1ea66109bea4ef4b6a